# aws-sandbox-accounts

./: .gitignore  Makefile  README.md  buildspec.build.yml  buildspec.deploy.yml  buildspec.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
apps/account-cleaner/: aws-nuke.template.yml  buildspec.yml
apps/account-cleaner/stacks/sandbox-administrator-account/: account-cleaner.yml
apps/account-manager/: Makefile  aws-nuke.template.yml  aws-nuke.yml  buildspec.yml  nuke.py  pyproject.toml
apps/account-manager-db-client/: Makefile  package  package.sh  pyproject.toml  requirements.txt  run.py
apps/account-manager-db-client/account_manager_db_client/: main.py
apps/account-manager-db-client/account_manager_db_client/actions/: fetch_dirty.py  mark_as_available.py  mark_as_dirty.py  mark_as_failed.py  mark_as_initial.py
apps/account-manager-db-client/account_manager_db_client/models/: account_status.py
apps/account-manager-db-client/account_manager_db_client/utils/: db.py
apps/account-manager-db-client/stacks/sandbox-administrator-account/: account-manager-db-client.yml
apps/account-manager/stacks/sandbox-administrator-account/: account-manager.yml
apps/api/: Makefile  TODO.md  buildspec.yml  package.sh  pyproject.toml
apps/api/aws_sandbox_accounts_api/: main.py
apps/api/aws_sandbox_accounts_api/database_client/: __init__.py
apps/api/aws_sandbox_accounts_api/models/: account.py  user.py
apps/api/aws_sandbox_accounts_api/routers/: __init__.py  accounts.py  leases.py  users.py
apps/api/aws_sandbox_accounts_api/services/: accounts.py  leases.py  users.py
apps/api/aws_sandbox_accounts_api/utils/: assume_role.py
apps/api/ci/: codepipeline.yml
apps/api/scripts/: pipeline.sh
apps/api/stacks/sandbox-administrator-account/: api.yml  edge-certificate.yml
apps/auth-client/: Makefile  package.sh  pyproject.toml  requirements.prod.txt
apps/auth-client/auth_client/: main.py
apps/auth-client/auth_client/actions/: create_lease.py  remove_lease.py  remove_leases.py
apps/auth-client/stacks/sandbox-administrator-account/: auth-client.yml
apps/db-client/: Makefile  package.sh  pylintrc  pyproject.toml  requirements.prod.txt  requirements.txt  run.py
apps/db-client/db_client/: main.py
apps/db-client/db_client/actions/: claim_available_account.py  fetch_dirty.py  fetch_expired_leases.py  mark_as_available.py  mark_as_dirty.py  mark_as_failed.py  remove_lease.py  remove_leases.py  write_active_lease.py  write_lease.py  write_pending_lease.py
apps/db-client/db_client/models/: account_status.py  lease.py  lease_status.py
apps/db-client/stacks/sandbox-administrator-account/: db-client.yml
apps/db-client/stacks/sandbox-administrator-account/parameters/db-client/: test.json
apps/interface/: Makefile  buildspec.build.yml  eslint.config.ts  manage.py  package-lock.json  package.json  pyproject.toml
apps/interface/app/: app.css  root.tsx  routes.ts
apps/interface/app/auth/: auth-provider-props.client.ts
apps/interface/app/components/: alert.tsx  loading.tsx
apps/interface/app/components/alert/: index.tsx
apps/interface/app/components/bottom-navigation/: index.tsx
apps/interface/app/config/: auth.ts
apps/interface/app/models/: types.ts
apps/interface/app/networking/aws-sandbox-accounts-api/: index.ts  types.ts
apps/interface/app/routes/: _auth.tsx  callback.tsx  home.tsx  login.tsx
apps/interface/app/routes/accounts/: accounts-actions-context.ts  index.tsx
apps/interface/app/routes/accounts/components/: accounts-section.tsx  lease-creation-dialog.tsx
apps/interface/app/routes/accounts/components/accounts-section/: account-card.tsx  available-account-card.tsx  index.tsx
apps/interface/app/routes/accounts/components/accounts-section/components/: account-card.tsx
apps/interface/app/routes/user/me/: index.tsx
apps/interface/app/routes/user/me/components/user/: index.tsx
apps/interface/app/services/aws-sandbox-accounts-api/: index.ts  types.ts
apps/interface/aws_sandbox_accounts_interface/: asgi.py  settings.py  urls.py  wsgi.py
apps/interface/ci/: codepipeline.yml
apps/interface/leases/: views.py
apps/interface/leases/templates/leases/: index.html
apps/interface/leases/utils/: get_user_details.py
apps/interface/scripts/: pipeline.sh
apps/interface/stacks/sandbox-administrator-account/: certificate.yml  interface.yml
apps/interface/templates/: base.html
apps/interface/templates/snippets/: navbar.html
apps/lease-creator/stacks/sandbox-administrator-account/: lease-creator.yml
apps/lease-janitor/stacks/sandbox-administrator-account/: lease-janitor.yml
apps/pool-manager/: Makefile  package.sh  pyproject.toml
apps/pool-manager/stacks/sandbox-administrator-account/: pool-manager.yml
ci/: codepipeline.yml
ci/lambda-build-image/: Dockerfile  buildspec.yml  codepipeline.yml
common-resources/ci/: codepipeline.yml
common-resources/sandbox-administrator-account/ci/: codepipeline.yml
common-resources/sandbox-administrator-account/dns/: dns.yml
common-resources/sandbox-administrator-account/pool-store/: pool-store.yml
common-resources/sandbox-administrator-account/scripts/: pipeline.sh
common-resources/sandbox-administrator-account/user-pool/: user-pool.yml
docs/: architecture.drawio  table-design.md
scripts/: pipeline.sh  pipelines.sh
tools/db-seeder/: Makefile  pyproject.toml
tools/db-seeder/db_seeder/: main.py
tools/db-seeder/db_seeder/utils/: serialiser.py
tools/lease-manager/: Makefile  pyproject.toml
tools/lease-manager/lease_manager/: main.py
tools/lease-manager/lease_manager/leases/: create.py  invalidate.py  list_active.py
tools/lease-manager/lease_manager/utils/: deserialise.py  serialise.py  step_function_status_poller.py
tools/pool-manager/: Makefile  pyproject.toml
tools/pool-manager/pool_manager/: main.py
tools/pool-manager/pool_manager/actions/: actions.py
tools/pool-manager/pool_manager/db/: db.py
tools/pool-manager/pool_manager/models/: account.py
tools/pool-manager/pool_manager/utils/: logger.py
(+9 files in other folders)
