[tool.poetry]
name = "account-manager-db-client"
version = "0.1.0"
description = "DB client for account-manager"
authors = ["Alex Chesters <alex@cheste.rs>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.3.1"}
pylint = "^3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
