[tool.poetry]
name = "auth-client"
version = "0.1.0"
description = "auth client for aws-sandbox-accounts"
authors = ["Alex Chesters <alex@cheste.rs>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.3.1"}
pylint = "^3.2.4"
boto3 = "^1.34.139"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
