[tool.poetry]
name = "db-client"
version = "0.1.0"
description = "DB client for aws-sandbox-accounts"
authors = ["Alex Chesters <alex@cheste.rs>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.3.1"}
boto3 = "^1.34.139"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.4"
inquirer = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
