[tool.poetry]
name = "interface"
version = "0.1.0"
description = "interface for sandbox accounts"
authors = ["Alex Chesters <alex@cheste.rs>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
gunicorn = "^23.0.0"
boto3 = "^1.35.84"
humanize = "^4.11.0"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
