[tool.poetry]
name = "db-seeder"
version = "0.1.0"
description = "script to seed the db"
authors = ["Alex Chesters <alex@cheste.rs>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.135"
pylint = "^3.2.4"
inquirer = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
